[package]
name = "quill-core"
version = "0.1.0"
edition = "2021"
description = "High-performance binary engine for the Quill PHP Framework"
license = "MIT"
authors = ["Quill Authors"]

[lib]
name = "quill_core"
crate-type = ["cdylib"]

[dependencies]
matchit = "0.8"
sonic-rs = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.19", features = ["derive"] }
regex = "1.10"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["full"] }
futures = "0.3"
libc = "0.2"
