[package]
name = "quill-core"
version = "0.0.3"
edition = "2021"
description = "High-performance binary engine for the Quill PHP Framework"
license = "MIT"
authors = ["Quill Authors"]
repository = "https://github.com/quillphp/quill-core"
readme = "README.md"
keywords = ["php", "ffi", "high-performance", "quill", "engine"]
categories = ["api-bindings", "web-programming::http-server"]

[lib]
name = "quill_core"
crate-type = ["cdylib"]

[dependencies]
matchit = "0.8"
sonic-rs = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.19", features = ["derive"] }
regex = "1.10"
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "timeout", "cors"] }
futures = "0.3"
libc = "0.2"
once_cell = "1"
dashmap = "5"
socket2 = { version = "0.5", features = ["all"] }
flume = "0.11"
chrono = "0.4"
